Fix GitHub Pages deployment - update asset paths to relative

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <meta content="https://valuesnap.com/images/twitter-card.jpg" name="twitter:image"/>
   <meta content="@valuesnap" name="twitter:creator"/>
   <!-- Favicon -->
-  <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-  <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-  <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
-  <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+  <link href="static/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="static/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
+  <link href="static/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
+  <link href="static/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
   <!-- Preconnect to external domains for performance -->
   <link href="https://fonts.googleapis.com" rel="preconnect"/>
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
@@ -730,10 +730,10 @@
 
         .persona-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 40px;
             margin-top: 60px;
-            max-width: 1000px;
+            max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -1503,7 +1503,8 @@
             }
 
             .persona-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 24px;
             }
 
             .email-capture {
@@ -1974,7 +1975,7 @@
     <div class="persona-grid">
      <div class="persona-card">
       <div class="persona-avatar">
-       <img alt="Estate Inheritors" class="persona-image" src="ai_image_generation/generated_images/estate_inheritor_20251027_171127.png"/>
+       <img alt="Estate Inheritors" class="persona-image" src="static/ai_image_generation/generated_images/estate_inheritor_20251030_141612.png"/>
       </div>
       <div class="persona-label">
        Estate Inheritors
@@ -1985,7 +1986,7 @@
      </div>
      <div class="persona-card">
       <div class="persona-avatar">
-       <img alt="Resellers & Flippers" class="persona-image" src="ai_image_generation/generated_images/reseller_entrepreneur_20251027_171141.png"/>
+       <img alt="Resellers & Flippers" class="persona-image" src="static/ai_image_generation/generated_images/reseller_entrepreneur_20251030_140910.png"/>
       </div>
       <div class="persona-label">
        Resellers & Flippers
@@ -1996,7 +1997,7 @@
      </div>
      <div class="persona-card">
       <div class="persona-avatar">
-       <img alt="Antique Collectors" class="persona-image" src="ai_image_generation/generated_images/antique_collector_20251027_171157.png"/>
+       <img alt="Antique Collectors" class="persona-image" src="static/ai_image_generation/generated_images/antique_collector_20251030_141001.png"/>
       </div>
       <div class="persona-label">
        Antique Collectors
@@ -2007,7 +2008,7 @@
      </div>
      <div class="persona-card">
       <div class="persona-avatar">
-       <img alt="Small Business Owners" class="persona-image" src="ai_image_generation/generated_images/small_business_owner_20251027_171209.png"/>
+       <img alt="Small Business Owners" class="persona-image" src="static/ai_image_generation/generated_images/small_business_owner_20251030_141022.png"/>
       </div>
       <div class="persona-label">
        Small Business Owners
